--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Keycap theme",
     "version": "1.1.0",
     "publisher": "Vittojanapin",
+    "icon": "icon.png",
     "repository": {
         "url": "https://github.com/rvjanapin/gmkolivia"
     },
