--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "gmk-olivia",
     "displayName": "GMK Olivia",
-    "description": "Keycap theme",
+    "description": "Keycap theme inspired by GMK Olivia keycaps",
     "version": "1.1.2",
     "publisher": "Vittojanapin",
     "icon": "icon.png",
