--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "gmk-olivia",
-    "displayName": "GMK Olivia",
+    "displayName": "Olivia",
     "description": "Keycap theme inspired by GMK Olivia keycaps",
     "version": "1.1.3",
     "publisher": "Vittojanapin",
